add training program html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="index.header-promo.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.training__programs.html"
+      ></section>
     </header>
     <script src="js/index.js"></script>
   </body>
