--- a/index.header-promo.html
+++ b/index.header-promo.html
@@ -1,52 +1,84 @@
 <section class="hero">
   <header class="site-header">
-  <nav class="navbar">
-    <ul class="nav-left">
-      <li><a href="#">Про мене</a></li>
-      <li><a href="#">Відгуки</a></li>
-      <li><a href="#">Результати</a></li>
-      <li><a href="#">Програма</a></li>
-    </ul>
-
-    <div class="logo">
-      <a href="#">
-        <span>Джейк</span><span>Хантер</span>
-      </a>
-    </div>
-
-    <ul class="nav-right">
-      <li><a href="#">Що входить</a></li>
-      <li><a href="#">Питання та відповіді</a></li>
-      <li class="social"><a href="#"><img width="100px" src="img/facebook_logo.png" alt="Facebook"></a></li>
-      <li class="social"><a href="#"><img width="100px" src="img/instagram_logo.png" alt="Instagram"></a></li>
-      <li class="social"><a href="#"><img width="100px" src="img/youtube_logo.png" alt="YouTube"></a></li>
-    </ul>
-  </nav>
-</header>
+    <nav class="navbar">
+      <ul class="navbar__nav nav-left">
+        <li class="nav__item"><a href="#" class="nav__link">Про мене</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Відгуки</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Результати</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Програма</a></li>
+      </ul>
+      <div class="logo">
+        <a href="#" class="logo__link">
+          <span class="logo__first">Джейк</span
+          ><span class="logo__second">Хантер</span>
+        </a>
+      </div>
+      <ul class="navbar__nav nav-right">
+        <li class="nav__item"><a href="#" class="nav__link">Що входить</a></li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Питання та відповіді</a>
+        </li>
+        <li class="nav__item social">
+          <a href="#" class="social__link">
+            <img
+              width="100"
+              src="img/facebook_logo.png"
+              alt="Facebook"
+              class="social__icon"
+            />
+          </a>
+        </li>
+        <li class="nav__item social">
+          <a href="#" class="social__link">
+            <img
+              width="100"
+              src="img/instagram_logo.png"
+              alt="Instagram"
+              class="social__icon"
+            />
+          </a>
+        </li>
+        <li class="nav__item social">
+          <a href="#" class="social__link">
+            <img
+              width="100"
+              src="img/youtube_logo.png"
+              alt="YouTube"
+              class="social__icon"
+            />
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <div class="hero-content">
     <div class="hero-text">
       <div class="hero-date">
-        <span>Початок: 3 червня 2027 року</span>
-        <span>4 тижні</span>
+        <span class="hero-date__start">Початок: 3 червня 2027 року</span>
+        <span class="hero-date__duration">4 тижні</span>
       </div>
-      <h1>Тренуйся<br><strong>наполегливо</strong></h1>
-      <p>Готовий нарешті наростити м’язи та перезавантажити свій розум?</p>
-      <ul>
-        <li>✔ План харчування</li>
-        <li>✔ Особиста підтримка</li>
-        <li>✔ Регулярні перевірки результатів</li>
+      <h1 class="hero-title">
+        Тренуйся<br /><strong class="hero-title__highlight">наполегливо</strong>
+      </h1>
+      <p class="hero-subtitle">
+        Готовий нарешті наростити м’язи та перезавантажити свій розум?
+      </p>
+      <ul class="hero-features">
+        <li class="hero-features__item">✔ План харчування</li>
+        <li class="hero-features__item">✔ Особиста підтримка</li>
+        <li class="hero-features__item">✔ Регулярні перевірки результатів</li>
       </ul>
       <div class="price">
-        <span class="amount">390 грн</span>
-        <small>* Лише 30 місць!</small>
+        <span class="price__amount">390 грн</span>
+        <small class="price__note">* Лише 30 місць!</small>
       </div>
       <div class="hero-buttons">
-        <a href="#" class="btn-join">Долучитися</a>
-        <a href="#" class="btn-results">Реальні результати →</a>
+        <a href="#" class="btn btn-join">Долучитися</a>
+        <a href="#" class="btn btn-results">Реальні результати →</a>
       </div>
     </div>
     <div class="hero-image">
-      <img src="img/header.png" alt="Тренер">
+      <img src="img/header.png" alt="Тренер" class="hero-image__img" />
     </div>
   </div>
 </section>
